--- a/research/trapped-ion-calibration.html
+++ b/research/trapped-ion-calibration.html
@@ -58,6 +58,12 @@
             <li><a href="/notes.html">Notes</a></li>
             <li><a href="/outreach/ibpe.html">Outreach</a></li>
             <li>
+              <a href="#">Tools</a>
+              <ul>
+                <li><a href="/tools/latex2all.html">LaTeX2All</a></li>
+              </ul>
+            </li>
+            <li>
               <a href="#">Life</a>
               <ul>
                 <li><a href="/photography.html">Photography</a></li>
@@ -159,7 +165,6 @@
                       ></i
                     >, Granted 2024.
                   </li>
-                  
                 </ul>
               </article>
               <hr />
