--- a/tools/latex2all.html
+++ b/tools/latex2all.html
@@ -76,46 +76,55 @@
       <!-- Main -->
       <div class="wrapper style1">
         <div class="container">
-          <article id="main" class="special">
-            <header>
-              <h2>✨ LaTeX2All Converter ✨</h2>
-              <p>
-                Transform your LaTeX documents into web-friendly formats with
-                one click!<br />
-                Supports <strong>HTML</strong>, <strong>Markdown</strong>, and
-                plain text conversions.
-              </p>
-            </header>
-            <div class="card">
-              <h3 style="margin: 1.5rem 0">Upload your LaTeX file</h3>
-              <input type="file" id="latexFile" accept=".tex" />
+          <div class="row gtr-200">
+            <div class="col-8 col-12-mobile" id="content">
+              <article id="main" class="special">
+                <header>
+                  <h2>✨ LaTeX2All Converter ✨</h2>
+                  <p>
+                    Transform your LaTeX documents into web-friendly formats
+                    with one click!<br />
+                    Supports <strong>HTML</strong>, <strong>Markdown</strong>,
+                    and plain text conversions.
+                  </p>
+                </header>
+                <div class="card">
+                  <h3 style="margin: 1.5rem 0">Upload your LaTeX file</h3>
+                  <input type="file" id="latexFile" accept=".tex" />
 
-              <select id="format" class="format-select">
-                <option value="html">HTML</option>
-                <option value="text">Text (Coming Soon)</option>
-                <option value="markdown">Markdown (Coming Soon)</option>
-              </select>
+                  <select id="format" class="format-select">
+                    <option value="html">HTML</option>
+                    <option value="text">Text (Coming Soon)</option>
+                    <option value="markdown">Markdown (Coming Soon)</option>
+                  </select>
 
-              <button onclick="convertLatex()">Convert</button>
+                  <button onclick="convertLatex()">Convert</button>
 
-              <h3 style="margin: 1.5rem 0">Conversion result</h3>
+                  <h3 style="margin: 1.5rem 0">Conversion result</h3>
 
-              <div class="output-container">
-                <div class="feedback" id="feedback"></div>
-                <textarea
-                  id="output"
-                  class="output-box"
-                  placeholder="Your converted content will appear here..."
-                  rows="8"
-                ></textarea>
+                  <div class="output-container">
+                    <div class="feedback" id="feedback"></div>
+                    <textarea
+                      id="output"
+                      class="output-box"
+                      placeholder="Your converted content will appear here..."
+                      rows="8"
+                    ></textarea>
 
-                <div class="conversion-tools" style="margin-top: 1rem">
-                  <button onclick="copyToClipboard()">Copy All</button>
-                  <button onclick="exportToFile()">Export</button>
+                    <div class="conversion-tools" style="margin-top: 1rem">
+                      <button onclick="copyToClipboard()">Copy All</button>
+                      <button onclick="exportToFile()">Export</button>
+                    </div>
+                  </div>
                 </div>
-              </div>
+              </article>
             </div>
-          </article>
+            <div class="col-4 col-12-mobile" id="sidebar">
+              <header>
+                <h2>Update</h2>
+              </header>
+            </div>
+          </div>
         </div>
       </div>
 
