--- a/tools/latex2all.html
+++ b/tools/latex2all.html
@@ -121,7 +121,7 @@
             </div>
             <div class="col-4 col-12-mobile" id="sidebar">
               <header>
-                <h2>Update</h2>
+                <h3>Version Updates</h3>
               </header>
             </div>
           </div>
