--- a/tools/latex2all.html
+++ b/tools/latex2all.html
@@ -123,6 +123,12 @@
               <header>
                 <h3>Version Updates</h3>
               </header>
+              <h4>v1.1.0 <span class="update-date">2024-05-25</span></h4>
+              <ul>
+                <li>新增Markdown格式支持</li>
+                <li>优化数学公式转换</li>
+                <li>修复表格转换问题</li>
+              </ul>
             </div>
           </div>
         </div>
