--- a/tools/latex2all.html
+++ b/tools/latex2all.html
@@ -132,8 +132,13 @@
           </div>
         </div>
       </div>
-      <section class="donate-section">
-        <a href="javascript:void(0)" id="donate-btn" class="button">
+      <section>
+        <a
+          href="javascript:void(0)"
+          id="donate-btn"
+          class="button"
+          style="margin: 0 auto"
+        >
           <i class="fas fa-heart"></i>
           Support My Work
         </a>
