--- a/tools/latex2all.html
+++ b/tools/latex2all.html
@@ -133,15 +133,12 @@
         </div>
       </div>
       <section>
-        <a
-          href="javascript:void(0)"
-          id="donate-btn"
-          class="button"
-          style="margin: 0 auto"
-        >
-          <i class="fas fa-heart"></i>
-          Support My Work
-        </a>
+        <header>
+          <a href="javascript:void(0)" id="donate-btn" class="button">
+            <i class="fas fa-heart"></i>
+            Support My Work
+          </a>
+        </header>
       </section>
       <script>
         const modal = document.getElementById("donate-modal");
