--- a/tools/latex2all.html
+++ b/tools/latex2all.html
@@ -132,14 +132,17 @@
           </div>
         </div>
       </div>
-      <section>
-        <header>
-          <a href="javascript:void(0)" id="donate-btn" class="button">
-            <i class="fas fa-heart"></i>
-            Support My Work
-          </a>
-        </header>
-      </section>
+      <div>
+        <a
+          href="javascript:void(0)"
+          id="donate-btn"
+          class="button"
+          style="display: block; width: fit-content; margin: 0 auto"
+        >
+          <i class="fas fa-heart"></i>
+          Support My Work
+        </a>
+      </div>
       <script>
         const modal = document.getElementById("donate-modal");
         const btn = document.getElementById("donate-btn");
