--- a/photography.html
+++ b/photography.html
@@ -255,7 +255,7 @@
           >
             <img
               src="/images/photograph/small/beihai_park.jpeg"
-              alt="Morocco View"
+              alt="Beijing View"
             />
             <div class="photo-info">
               <h3>Beihai Park, Beijing, China</h3>
@@ -283,7 +283,7 @@
           <a
             href="/images/photograph/full/white_cliff.JPG"
             data-lightbox="gallery"
-            data-title="Epping Forest, UK"
+            data-title="White Cliff, UK"
           >
             <img
               src="/images/photograph/small/white_cliff.jpeg"
