--- a/photography.html
+++ b/photography.html
@@ -68,7 +68,13 @@
             <li><a href="/publications.html">Publications</a></li>
 
             <li><a href="/notes.html">Notes</a></li>
-            <li><a href="/outreach/ibpe.html">Outreach</a></li>
+            <li>
+              <a href="#">Outreach</a>
+              <ul>
+                <li><a href="/outreach/ibpe.html">IBPE</a></li>
+                <li><a href="#">HerSTEM</a></li>
+              </ul>
+            </li>
             <li>
               <a href="#">Tools</a>
               <ul>
