--- a/index.html
+++ b/index.html
@@ -103,11 +103,12 @@
             <li><a href="/publications.html">Publications</a></li>
 
             <li><a href="/notes.html">Notes</a></li>
-            <li><a href="#">Outreach</a>
-            <ul>
-              <li><a href="/outreach/ibpe.html">IBPE</a></li>
-              <li><a href="#">HerSTEM</a></li>
-            </ul>
+            <li>
+              <a href="#">Outreach</a>
+              <ul>
+                <li><a href="/outreach/ibpe.html">IBPE</a></li>
+                <li><a href="#">HerSTEM</a></li>
+              </ul>
             </li>
             <li>
               <a href="#">Tools</a>
@@ -435,11 +436,14 @@
               </li>
               <li>
                 <strong>UCAS Scholarship</strong>, University of Chinese Academy
-                of Sciences, 2020.
+                of Sciences, 2020
               </li>
 
               <li><strong>Outstanding Graduate</strong>, HUST, 2022</li>
-              <li><strong>Outstanding Intern</strong>, Baidu, Inc., 2023</li>
+              <li>
+                <strong>Outstanding Intern</strong>, Institute for Quantum
+                Computing, Baidu Research, 2023
+              </li>
             </ul>
           </section>
         </div>
