--- a/old-files/research/trapped-ion-calibration.html
+++ b/old-files/research/trapped-ion-calibration.html
@@ -293,9 +293,7 @@
                     >
                   </li>
                   <li>
-                    <a
-                      href="/docs/CV_ChenHuang.pdf"
-                      class="icon fa-solid fa-file"
+                    <a href="/CV_ChenHuang.pdf" class="icon fa-solid fa-file"
                       ><span class="label">CV</span></a
                     >
                   </li>
