--- a/old-files/outreach/ibpe.html
+++ b/old-files/outreach/ibpe.html
@@ -123,7 +123,7 @@
                 teammates and I established to preserve and share the
                 intellectual output of IBPE members. While IBPE is known for its
                 numerous reading and exploratory activities, many brilliant
-                outcomes from past projects were unfortunately left
+                outcomes from past research were unfortunately left
                 undocumented, leading to the loss of valuable insights over
                 time. To address this, we created IRL to publish key
                 achievements from IBPE activities, contributions to the IBPE
