--- a/old-files/research/index.html
+++ b/old-files/research/index.html
@@ -86,7 +86,7 @@
             <div class="col-4 col-12-mobile" id="sidebar">
               <hr class="first" />
               <nav class="research-main-nav" aria-label="Research Categories">
-                <h3>Research Projects</h3>
+                <h3>Research Research</h3>
                 <ul class="research-links">
                   <li>
                     <a href="/research/index.html" aria-current="page"
