--- a/old-files/index.html
+++ b/old-files/index.html
@@ -344,7 +344,7 @@
                 <strong>China National Scholarship</strong>, Ministry of
                 Education of P.R. China, 2019
                 <p class="text-secondary">
-                  The highest honor for university students in China.
+                  The highest honor for institution students in China.
                 </p>
               </li>
               <li>
