--- a/old-files/outreach/ibpe.html
+++ b/old-files/outreach/ibpe.html
@@ -98,11 +98,11 @@
               </header>
               <p>
                 In collaboration with my team, I organized and led reading group
-                activities to help first-year students adapt to university-level
-                learning. We divided students into small groups of 4-5, with
-                each group assigned a mentor from senior students. Weekly tasks
-                centered around <i>The Feynman Lectures on Physics</i> were
-                assigned, including
+                activities to help first-year students adapt to
+                institution-level learning. We divided students into small
+                groups of 4-5, with each group assigned a mentor from senior
+                students. Weekly tasks centered around
+                <i>The Feynman Lectures on Physics</i> were assigned, including
                 <strong
                   >theoretical derivations, experimental design, and
                   simulations</strong
